FIX CSS and layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,6 @@
 body {
   margin: 0;
   background-color: black;
+    overflow-x: hidden;
 }
+
